# ancse-hs2020

./: README.md  compiling.html  cs_techniques.html
Solution0/2d-poissonFEM/: CMakeLists.txt  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  load_vector_assembly.hpp  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp
Solution0/2d-poissonFEM/cmake/: GetEigen.cmake
Solution0/2d-poissonFEM/data/: Lshape_2.mesh  Lshape_3.mesh  Lshape_4.mesh  square.geo
Solution0/2d-poissonFEM/unittest/: CMakeLists.txt  IntegrationTest.cpp  TestCoordinateTransform.cpp  TestDirichletBoundary.cpp  TestElementVector.cpp  TestGradientShapeFunction.cpp  TestShapeFunction.cpp  TestStiffnessMatrix.cpp  main.cpp
Solution0/linear-transp-1d/: linear_transport.cpp  my_sol_movie.py  sol_movie.py
series0_handout/2d-poissonlFEM/data/: Lshape_5.mesh  fix_mesh.py
series0_handout/linear-transp-1d/: CMakeLists.txt  README.txt  sol_movie.py
series0_handout/linear-transp-1d/cmake/: GetEigen.cmake
series1_handout/fvm_scalar_1d/: config.json  plot.py
series1_handout/fvm_scalar_1d/cmake/: GetEigen.cmake  GetGTest.cmake  GetJSON.cmake
series1_handout/fvm_scalar_1d/experiments/jump/: config.json
series1_handout/fvm_scalar_1d/experiments/sine/: config.json
series1_handout/fvm_scalar_1d/include/ancse/: boundary_condition.hpp  fvm_rate_of_change.hpp  model.hpp  numerical_flux.hpp  reconstruction.hpp  snapshot_writer.hpp
series1_handout/fvm_scalar_1d/src/: fvm_scalar.cpp
series1_handout/fvm_scalar_1d/src/ancse/: boundary_condition.cpp  cfl_condition.cpp  config.cpp  fvm_rate_of_change.cpp  model.cpp  runge_kutta.cpp  snapshot_writer.cpp  time_loop.cpp
series1_handout/fvm_scalar_1d/tests/: CMakeLists.txt  test_grid.cpp
series2_handout/hyp_sys_1d/: plot_euler.py  plot_swe.py
series2_handout/hyp_sys_1d/include/ancse/: cfl_condition.hpp  fvm_rate_of_change.hpp  limiters.hpp  model.hpp  numerical_flux.hpp  reconstruction.hpp  runge_kutta.hpp
series2_handout/hyp_sys_1d/src/ancse/: cfl_condition.cpp  dg_handler.cpp  dg_limiting.cpp  dg_rate_of_change.cpp  fvm_rate_of_change.cpp  model.cpp  polynomial_basis.cpp  runge_kutta.cpp  snapshot_writer_bak.cpp
series2_handout/unstructured_euler/: cfl_condition.hpp  gradient.hpp  hllc.hpp  mesh.hpp  numerical_flux.hpp  slope_limiter.hpp
templates/series0_handout/2d-poissonlFEM/: README.txt
templates/series0_handout/2d-poissonlFEM/data/: Lshape.geo  Lshape_0.mesh  Lshape_1.mesh  run_gmesh.sh
templates/series1_handout/fvm_scalar_1d/: plot.py
templates/series1_handout/fvm_scalar_1d/experiments/backward_jump/: config.json
templates/series1_handout/fvm_scalar_1d/experiments/ex2/: config.json
templates/series1_handout/fvm_scalar_1d/tests/: test_boundary_condition.cpp  test_runge_kutta.cpp
(+7 files in other folders)
